# lemon-launcher-rs

./: Cargo.toml  README.md  games.toml  lemon-launcher.toml
config/: keymap.toml  lemon-launcher.toml  menu.toml
config/full/: menu.toml
config/minimal/: config.toml  menu.toml
src/: cli.rs  env.rs  font_manager.rs  keymap.rs  lemon_config.rs  lemon_keymap.rs  lemon_launcher.rs  lemon_menu.rs  lemon_screen.rs  main.rs  mame_xml.rs  menu_config.rs  renderer.rs  rom_library.rs  roms_table.sql  scan.rs
