[package]
name = "lemon-launcher"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
configparser = "3.1.0"
fallible-iterator = "0.3.0"
quick-xml = { version = "0.36.2", features = ["serialize"] }
rusqlite = "0.32.1"
sdl2 = { version = "0.37.0", features = ["image", "ttf"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-env = "0.2.0"
thiserror = "1.0.65"
toml = "0.8.19"
